# darp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cache.txt  code.gp  run.py  run.sh  test.gp
data/instances/: R5b.txt  R8a.txt  README.txt  a1-3.txt  test.txt
data/instances/a/: a2-16-0.7.txt  a2-20-0.7.txt  a5-50-0.7.txt
data/instances/solutions_uber/: u2-16-0.4-3.txt  u2-16-0.7-2.txt  u2-16-0.7-3.txt  u2-20-0.1-2.txt  u2-20-0.1-3.txt  u2-20-0.1.txt  u2-20-0.7-3.txt  u2-20-0.7.txt  u2-24-0.1-2.txt  u2-24-0.1-3.txt  u2-24-0.1.txt  u2-24-0.4-2.txt  u2-24-0.4-3.txt  u2-24-0.4.txt  u2-24-0.7-2.txt  u3-18-0.1-2.txt  u3-18-0.4-2.txt  u3-18-0.4.txt  u3-24-0.1-2.txt  u3-24-0.1-3.txt  u3-24-0.7-2.txt  u3-24-0.7.txt  u3-30-0.1-2.txt  u3-30-0.4-3.txt  u3-30-0.4.txt  u3-30-0.7-3.txt  u3-30-0.7.txt  u3-36-0.1.txt  u3-36-0.4.txt  u3-36-0.7-3.txt  u3-36-0.7.txt  u4-16-0.1-2.txt  u4-16-0.1.txt  u4-16-0.4-3.txt  u4-16-0.7-3.txt  u4-24-0.1-3.txt  u4-24-0.4-2.txt  u4-24-0.7-3.txt  u4-32-0.4-2.txt  u4-32-0.4-3.txt  (+22 more)
data/instances/u/: u2-20-0.7.txt  u2-24-0.7.txt  u3-18-0.7.txt  u3-24-0.7.txt  u3-30-0.7.txt  u4-32-0.7.txt  u5-40-0.7.txt  u5-50-0.7.txt
extras/scripts/gnuplot/: alphas.gp  convergence_analysis.gp  graph.gp  t.py  tttplot.gp
extras/scripts/perl/: input-exp.gpl  input-exp.ps  input-qq.gpl  input-qq.ps  tttplots.pl
include/: algorithms.hpp  gnuplot.hpp  instance.hpp  node.hpp  request.hpp  route.hpp  run.hpp  solution.hpp  vehicle.hpp
include/algorithms/: ReactiveGrasp.hpp  grasp.hpp  reactive_grasp.hpp
include/data-structures/: Node.hpp  Request.hpp  Route.hpp  Run.hpp  Singleton.hpp  Solution.hpp  Vehicle.hpp  instance.hpp  node.hpp  request.hpp  route.hpp  run.hpp  solution.hpp
include/gnuplot/: Gnuplot.hpp
include/utils/: Display.hpp  Gnuplot.hpp  SolutionFileStorer.hpp  Timer.hpp  display.hpp  gnuplot.hpp  timer.hpp
instances/: a1-3.txt
instances/solutions_uber/: u2-16-0.1-2.txt  u2-16-0.1-3.txt  u2-16-0.1.txt  u2-16-0.4-2.txt  u2-16-0.4.txt  u2-16-0.7.txt  u2-20-0.4-2.txt  u2-20-0.4-3.txt  u2-20-0.4.txt  u2-20-0.7-2.txt  u3-18-0.1-3.txt  u3-18-0.1.txt  u3-18-0.4-3.txt  u3-18-0.7-2.txt  u3-18-0.7-3.txt  u3-18-0.7.txt  u3-24-0.1.txt  u3-24-0.4-2.txt  u3-24-0.4-3.txt  u3-24-0.4.txt  u3-24-0.7-3.txt  u3-30-0.1-3.txt  u3-30-0.1.txt  u3-30-0.4-2.txt  u3-30-0.7-2.txt  u3-36-0.1-2.txt  u3-36-0.1-3.txt  u3-36-0.4-2.txt  u3-36-0.4-3.txt  u3-36-0.7-2.txt  u4-16-0.1-3.txt  u4-16-0.4-2.txt  u4-16-0.4.txt  u4-16-0.7-2.txt  u4-16-0.7.txt  u4-24-0.1.txt  u4-24-0.4-3.txt  u4-24-0.4.txt  u4-24-0.7-2.txt  u4-24-0.7.txt  (+15 more)
src/: algorithms.cpp  gnuplot.cpp  instance.cpp  main.cpp  node.cpp  request.cpp  route.cpp  run.cpp  solution.cpp  vehicle.cpp
src/algorithms/: Grasp.cpp  Grasp.hpp  InsertionHeuristic.hpp  ReactiveGrasp.cpp  ReactiveGrasp.hpp  grasp.cpp  reactive_grasp.cpp
src/data-structures/: Instance.hpp  Node.cpp  Node.hpp  Point.hpp  Request.cpp  Request.hpp  Route.cpp  Route.hpp  Run.cpp  Singleton.cpp  Singleton.hpp  Solution.cpp  Solution.hpp  Vehicle.cpp  Vehicle.hpp  instance.cpp  node.cpp  request.cpp  route.cpp  run.cpp  solution.cpp  vehicle.cpp
src/gnuplot/: Gnuplot.cpp  Gnuplot.hpp  schedule.gp  solution.gp
src/utils/: Display.cpp  Display.hpp  Gnuplot.cpp  Plotter.cpp  Plotter.hpp  Prng.cpp  Prng.hpp  SolutionFileStorer.cpp  Timer.cpp  Timer.hpp  display.cpp  gnuplot.cpp  timer.cpp
tests/: Solution.test.cpp
(+114 files in other folders)
